# OpenWebAgent

./: .gitignore  capture_openwebagent.pcapng  insurance_simu_prompt.txt  readme.md
plugin/: package.json
plugin/config/: webpack.config.js
plugin/public/: manifest.json
plugin/src/api/: index.js
plugin/src/background/: index.js
plugin/src/common/js/: getHtmlInfo.js
plugin/src/content/: index.js
plugin/src/lib/: som.js
plugin/src/popup/pages/chatWindow/: index.js
server/: README.md  compose.yml  init-mongo.js  pyproject.toml  requirements.txt
server/agent/: run_server.py
server/config/: mongo_config.yaml  server_config.yaml
server/database/: __init__.py
server/database/objects/: turn.py
server/models/: planner_model.py
server/models/llms/: base_model.py  openai_model.py
server/prompts/: planner_prompt.py
server/utils/: utils.py
